src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>CnP_PaaS__CnP_Campaign_Lift_URL__c</fullName>
        <label>C&amp;P Campaign Lift URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Increment__c</fullName>
        <label>C&amp;P Increment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Expiration_date__c</fullName>
        <label>C&amp;P Lift Expiration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Last_Updated__c</fullName>
        <label>C&amp;P Lift Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Start_Value__c</fullName>
        <label>C&amp;P Start Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>